Pre-Release 1.6.0
+ Added Application shutdown if config has not been updated.
= Updated other Libraries from Maven.
= Removed warnings.
= Updated to JDA 5.0.0-alpha5.
= Revamped Addon naming and handling.
= Fixed other people being able to access the Music part of Ree6 without being in the same Channel.
= Documentation.
= Logger file size fixing.
= Code cleaning.
- Removed LoggerImpl.java