@@ -10,7 +10,7 @@ import de.presti.ree6.main.Main;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
-import net.dv8tion.jda.api.interactions.commands.build.CommandData;
+import net.dv8tion.jda.internal.interactions.CommandDataImpl;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 
 import java.util.stream.Collectors;
@@ -18,7 +18,7 @@ import java.util.stream.Collectors;
 public class Help extends Command {
 
     public Help() {
-        super("help", "Shows a list of every Command!", Category.INFO, new CommandData("help", "Shows a list of every Command!")
+        super("help", "Shows a list of every Command!", Category.INFO, new CommandDataImpl("help", "Shows a list of every Command!")
                 .addOptions(new OptionData(OptionType.STRING, "category", "Which Category you want to check out.")));
     }
 
@@ -26,7 +26,7 @@ public class Help extends Command {
     public void onPerform(CommandEvent commandEvent) {
 
         if (commandEvent.isSlashCommand()) {
-            OptionMapping categoryOption = commandEvent.getSlashCommandEvent().getOption("category");
+            OptionMapping categoryOption = commandEvent.getSlashCommandInteractionEvent().getOption("category");
 
             if (categoryOption != null) {
                 sendHelpInformation(categoryOption.getAsString(), commandEvent);
@@ -62,7 +62,7 @@ public class Help extends Command {
                 StringBuilder end = new StringBuilder();
 
                 Category category = getCategoryFromString(commandEvent.getArguments()[0]);
-                for (Command cmd : Main.getInstance().getCommandManager().getCommands().stream().filter(command -> command.getCategory() == category).collect(Collectors.toList())) {
+                for (Command cmd : Main.getInstance().getCommandManager().getCommands().stream().filter(command -> command.getCategory() == category).toList()) {
                         end.append("``")
                                 .append(Main.getInstance().getSqlConnector().getSqlWorker().getSetting(commandEvent.getGuild().getId(), "chatprefix").getStringValue())
                                 .append(cmd.getCmd())
