@@ -17,7 +17,6 @@ import de.presti.ree6.music.MusicWorker;
 import de.presti.ree6.sql.SQLConnector;
 import de.presti.ree6.utils.ArrayUtil;
 import de.presti.ree6.utils.Config;
-import de.presti.ree6.utils.LoggerImpl;
 import de.presti.ree6.utils.Notifier;
 import net.dv8tion.jda.api.entities.Activity;
 import net.dv8tion.jda.api.entities.Guild;
@@ -28,56 +27,95 @@ import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.stream.Collectors;
 
+/**
+ * Main Application class, used to store Instances of System Relevant classes.
+ */
 public class Main {
 
+    // An Instance of the class itself.
     static Main instance;
 
+    // Instance of the Notifier Manager, used to manage the Notifier Tools.
     Notifier notifier;
 
+    // Instance of the Command and Addon Manager
     CommandManager commandManager;
     AddonManager addonManager;
+
+    // Instance of the SQL-Connector used to manage the connection between the SQL Server and the Application
     SQLConnector sqlConnector;
+
+    // Instance of the LoggerQueue, used to merge Logs to prevent Rate-Limits
     LoggerQueue loggerQueue;
+
+    // Instance of the MusicWorker used to manage the Music-Player.
     MusicWorker musicWorker;
 
+    // Instance of the Logger used to log the Command output.
     Logger logger;
 
-    Thread checker;
+    // Instance of the Config System.
     Config config;
 
+    // A Thread used to check if a day has passed, and if so to clean the cache
+    Thread checker;
+
+    // String used to identify the last day.
     String lastDay = "";
 
+    /**
+     * Main methode called when Application starts.
+     * @param args Start Arguments.
+     */
     public static void main(String[] args) {
+
+        // Create the Main instance.
         instance = new Main();
 
+        // Create the Logger Instance.
         instance.logger = LoggerFactory.getLogger(Main.class);
 
+        // Create the LoggerQueue Instance.
         instance.loggerQueue = new LoggerQueue();
 
+        // Create the Config System Instance.
         instance.config = new Config();
 
+        // Initialize the Config.
         instance.config.init();
 
+        // Check if there is a default value, if so close application and inform.
+        if (instance.config.getConfig().getString("mysql.pw").equalsIgnoreCase("yourpw")) {
+            instance.logger.error("It looks like the default configuration has not been updated! Exiting!");
+            System.exit(0);
+        }
+
+        // Create a RayGun Client to send Exception to an external Service for Bug fixing.
         Thread.setDefaultUncaughtExceptionHandler((t, e) -> new RaygunClient(instance.config.getConfig().getString("raygun.apitoken")).send(e));
 
+        // Create a new connection between the Application and the SQL-Server.
         instance.sqlConnector = new SQLConnector(instance.config.getConfig().getString("mysql.user"),
                 instance.config.getConfig().getString("mysql.db"), instance.config.getConfig().getString("mysql.pw"),
                 instance.config.getConfig().getString("mysql.host"), instance.config.getConfig().getInt("mysql.port"));
 
+        // Create the Command-Manager instance.
         instance.commandManager = new CommandManager();
 
+        // Create the Notifier-Manager instance.
         instance.notifier = new Notifier();
 
+        // Register all Twitch Channels.
         instance.notifier.registerTwitchChannel(instance.sqlConnector.getSqlWorker().getAllTwitchNames());
 
+        // Register the Event-handler.
         instance.notifier.registerTwitchEventHandler();
 
         try {
-            BotUtil.createBot(BotVersion.DEV, "1.5.7");
+            BotUtil.createBot(BotVersion.DEV, "1.6.0");
             instance.musicWorker = new MusicWorker();
             instance.addEvents();
         } catch (Exception ex) {
-            LoggerImpl.log("Main", "Error while init: " + ex.getMessage());
+            instance.logger.error("[Main] Error while init: " + ex.getMessage());
         }
 
         instance.addHooks();
@@ -100,28 +138,28 @@ public class Main {
 
     private void shutdown() {
         long start = System.currentTimeMillis();
-        LoggerImpl.log("Main", "Shutdown init. !");
+        instance.logger.info("[Main] Shutdown init. !");
 
         if (sqlConnector != null && (sqlConnector.IsConnected())) {
-            LoggerImpl.log("Main", "Closing Database Connection!");
+            instance.logger.info("[Main] Closing Database Connection!");
             getSqlConnector().close();
-            LoggerImpl.log("Main", "Closed Database Connection!");
+            instance.logger.info("[Main] Closed Database Connection!");
         }
 
-        LoggerImpl.log("Main", "Disabling every Addon!");
+        instance.logger.info("[Main] Disabling every Addon!");
         getAddonManager().stopAddons();
-        LoggerImpl.log("Main", "Every Addon has been disabled!");
+        instance.logger.info("[Main] Every Addon has been disabled!");
 
-        LoggerImpl.log("Main", "Closing Twitch API Instance!");
+        instance.logger.info("[Main] Closing Twitch API Instance!");
         getNotifier().getTwitchClient().close();
-        LoggerImpl.log("Main", "Twitch API Instance closed!");
+        instance.logger.info("[Main] Twitch API Instance closed!");
 
-        LoggerImpl.log("Main", "JDA Instance shutdown init. !");
+        instance.logger.info("[Main] JDA Instance shutdown init. !");
         BotUtil.shutdown();
-        LoggerImpl.log("Main", "JDA Instance has been shut down!");
+        instance.logger.info("[Main] JDA Instance has been shut down!");
 
-        LoggerImpl.log("Main", "Everything has been shut down in " + (System.currentTimeMillis() - start) + "ms!");
-        LoggerImpl.log("Main", "Good bye!");
+        instance.logger.info("[Main] Everything has been shut down in " + (System.currentTimeMillis() - start) + "ms!");
+        instance.logger.info("[Main] Good bye!");
     }
 
     public void createCheckerThread() {
@@ -132,24 +170,24 @@ public class Main {
 
                     getSqlConnector().close();
 
-                    sqlConnector =new SQLConnector(config.getConfig().getString("mysql.user"), config.getConfig().getString("mysql.db"), config.getConfig().getString("mysql.pw"), config.getConfig().getString("mysql.host"), config.getConfig().getInt("mysql.port"));
+                    sqlConnector = new SQLConnector(config.getConfig().getString("mysql.user"), config.getConfig().getString("mysql.db"), config.getConfig().getString("mysql.pw"), config.getConfig().getString("mysql.host"), config.getConfig().getInt("mysql.port"));
 
                     ArrayUtil.messageIDwithMessage.clear();
                     ArrayUtil.messageIDwithUser.clear();
 
                     BotUtil.setActivity(BotInfo.botInstance.getGuilds().size() + " Guilds", Activity.ActivityType.WATCHING);
 
-                    LoggerImpl.log("Stats", "");
-                    LoggerImpl.log("Stats", "Today's Stats:");
-                    LoggerImpl.log("Stats", "Guilds: " + BotInfo.botInstance.getGuilds().size());
-                    LoggerImpl.log("Stats", "Overall Users: " + BotInfo.botInstance.getGuilds().stream().mapToInt(Guild::getMemberCount).sum());
-                    LoggerImpl.log("Stats", "");
+                    instance.logger.info("[Stats] ");
+                    instance.logger.info("[Stats] Today's Stats:");
+                    instance.logger.info("[Stats] Guilds: " + BotInfo.botInstance.getGuilds().size());
+                    instance.logger.info("[Stats] Overall Users: " + BotInfo.botInstance.getGuilds().stream().mapToInt(Guild::getMemberCount).sum());
+                    instance.logger.info("[Stats] ");
                     lastDay = new SimpleDateFormat("dd").format(new Date());
                 }
 
                 for (Guild g : BotInfo.botInstance.getGuilds().stream().filter(guild -> guild.getAudioManager().getSendingHandler() != null
                         && guild.getSelfMember().getVoiceState() != null &&
-                        guild.getSelfMember().getVoiceState().inAudioChannel()).collect(Collectors.toList())) {
+                        guild.getSelfMember().getVoiceState().inAudioChannel()).toList()) {
                     GuildMusicManager gmm = musicWorker.getGuildAudioPlayer(g);
 
                     try {
@@ -166,7 +204,7 @@ public class Main {
                 }
 
                 try {
-                    Thread.sleep((10 * (60000L)));
+                    wait((10 * (60000L)));
                 } catch (InterruptedException ignore) {
                 }
             }
